--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -4,9 +4,6 @@ on:
   push:
     branches:
       - main
-      - release/*
-      - feature/*
-      - bugfix/*
   pull_request:
     branches:
       - main
@@ -16,17 +13,22 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-      - uses: actions/checkout@v2
-      - name: Set up Node.js
-        uses: actions/setup-node@v2
-        with:
-          node-version: '14'
+        - name: Checkout code
+          uses: actions/checkout@v2
+  
+        - name: Set up Conda
+          uses: conda-incubator/setup-miniconda@v2
+          with:
+            auto-activate-base: false
+  
+        - name: Create Conda environment
+          run: conda env create -f environment.yml
+  
+        - name: Activate Conda environment
+          run: conda activate SAO
+  
+        - name: Run python tests
+          run: python ./tests/t1_print.py
 
-      - name: Install dependencies
-        run: npm install
 
-      - name: Run tests
-        run: npm test
 
-      - name: Lint code
-        run: npm run lint
