--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -24,11 +24,15 @@ jobs:
         - name: Create Conda environment
           run: conda env create -f environment.yml
   
-        - name: Activate Conda environment
-          run: conda activate SAO
+        - name: Initialize Conda
+          shell: bash -l {0}
+          run: conda init bash
   
-        - name: Run python tests
-          run: python ./tests/t1_print.py
+        - name: Activate Conda environment and run tests
+          shell: bash -l {0}
+          run: |
+            conda activate SAO
+            python ./tests/t1_print.py
 
 
 
