--- a/environment.yml
+++ b/environment.yml
@@ -83,6 +83,7 @@ dependencies:
       - cffi==1.17.0
       - charset-normalizer==3.3.2
       - contourpy==1.2.1
+      - coverage==7.6.1
       - cycler==0.12.1
       - defusedxml==0.7.1
       - docutils==0.20.1
@@ -94,6 +95,7 @@ dependencies:
       - httpx==0.27.0
       - idna==3.7
       - imagesize==1.4.1
+      - iniconfig==2.0.0
       - ipywidgets==8.1.5
       - isoduration==20.11.0
       - jinja2==3.1.4
@@ -125,9 +127,12 @@ dependencies:
       - overrides==7.7.0
       - pandocfilters==1.5.1
       - pillow==10.4.0
+      - pluggy==1.5.0
       - prometheus-client==0.20.0
       - pycparser==2.22
       - pyparsing==3.1.2
+      - pytest==8.3.2
+      - pytest-cov==5.0.0
       - python-json-logger==2.0.7
       - pyyaml==6.0.2
       - qtconsole==5.5.2
